--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,4 +3,5 @@
   <h2><%= @restaurant.name %></h2>
   <p>in <%= @restaurant.address %></p>
   <p><%= @restaurant.category.capitalize %></p>
+  <p><%= @restaurant.reviews %></p>
 </div>
